--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,8 @@
-body, html{
-	background-color: #eee;
-	font-family: 'Open Sans', sans-serif;
-}		
+body,
+html {
+  background-color: #eee;
+  font-family: 'Open Sans', sans-serif;
+}
 
 /* jquery countdown*/
 ul.bid-timer {
@@ -15,7 +16,9 @@ ul.bid-timer {
   margin-top: -13px;
 }
 
-ul.bid-timer li { display: inline-block; }
+ul.bid-timer li {
+  display: inline-block;
+}
 
 ul.bid-timer li span {
   font-size: 80px;
@@ -34,29 +37,20 @@ ul.bid-timer li p {
   font-size: 25px;
 }
 
-
-ul.bid-timer{
-    
+ul.bid-timer li span {
+  font-size: 20px !important;
 }
 
-
-ul.bid-timer li span{
-	font-size: 20px !important;
-
-}
-
-ul.bid-timer li.seperator{
-	font-size: 22px !important;
-    line-height: 75px !important;
+ul.bid-timer li.seperator {
+  font-size: 22px !important;
+  line-height: 75px !important;
 }
 
 /*Product Cards New*/
 
-
 /* 
  * Product Page 3 
  */
-
 
 .product-container {
   background-color: #fff;
@@ -79,7 +73,7 @@ ul.bid-timer li.seperator{
 }
 
 .tag-sale::before {
-  content: "SALE";
+  content: 'SALE';
   color: #fff;
   font-weight: bold;
   display: block;
@@ -88,21 +82,20 @@ ul.bid-timer li.seperator{
 }
 
 .product-description {
-  background-color: #F7F7F7;
-  border-top: 1px solid #EFEFEF;
+  background-color: #f7f7f7;
+  border-top: 1px solid #efefef;
   padding: 10px 20px;
   color: #797979;
 }
 
 .product-image {
-  /*padding: 20px;*/
   height: 260px;
   position: relative;
   overflow: hidden;
   transition: 1s;
 }
 
-.product-name h1{
+.product-name h1 {
   font-style: normal;
   overflow-x: hidden;
   white-space: nowrap;
@@ -114,7 +107,7 @@ ul.bid-timer li.seperator{
   background: #fff;
   width: 100px;
   height: 100px;
-  color: #4FDAA4;
+  color: #4fdaa4;
   border-radius: 50%;
   font-size: 22px;
   text-align: center;
@@ -124,17 +117,15 @@ ul.bid-timer li.seperator{
   top: calc(50% - 50px);
   opacity: 0;
   transition: 1s;
-  
 }
 
 .product-link:hover {
   text-decoration: none;
-  color: #4FDAA4;
+  color: #4fdaa4;
 }
 
-
 .hover-link {
-  background-color: #4FDAA4;
+  background-color: #4fdaa4;
   position: absolute;
   left: 0;
   top: 0;
@@ -145,12 +136,11 @@ ul.bid-timer li.seperator{
 }
 
 .product-image img {
-  /*width: 100%;*/
   height: 100%;
   margin-left: -40px;
 }
 
-.timer-here{
+.timer-here {
   padding: 0 15px;
   background-color: #292929;
 }
@@ -164,7 +154,7 @@ ul.bid-timer li.seperator{
 }
 
 .product-description p {
-  color: #C4C4C4;
+  color: #c4c4c4;
 }
 
 .product-description .price {
@@ -173,12 +163,12 @@ ul.bid-timer li.seperator{
   font-size: 23px;
   text-align: right;
   font-weight: bold;
-  color: #2DD493;
+  color: #2dd493;
   margin-bottom: 5px;
 }
 
 .product-option {
-  border-top: 1px solid #D2D2D2;
+  border-top: 1px solid #d2d2d2;
 }
 
 .product-option h3 {
@@ -199,26 +189,26 @@ ul.bid-timer li.seperator{
 }
 
 .product-color li.red {
-  background-color: #F75375;
+  background-color: #f75375;
 }
 .product-color li.blue {
-  background-color: #53A0F7;
+  background-color: #53a0f7;
 }
 .product-color li.green {
-  background-color: #59CFAF;
+  background-color: #59cfaf;
 }
 .product-color li.gray {
-  background-color: #C7C7C7;
+  background-color: #c7c7c7;
 }
 .product-color li.black {
-  background-color: #4E5156;
+  background-color: #4e5156;
 }
 .product-color li.dark-blue {
-  background-color: #2060AF;
+  background-color: #2060af;
 }
 
 .product-container:hover {
-  box-shadow: 0px 10px 25px -2px rgba(0,0,0,0.36);
+  box-shadow: 0px 10px 25px -2px rgba(0, 0, 0, 0.36);
 }
 
 .product-container:hover .product-image {
@@ -241,110 +231,79 @@ ul.bid-timer li.seperator{
   animation: hovering 1000ms linear both;
 }
 
-
-.fa-play{
-  color: #2DD493;
+.fa-play {
+  color: #2dd493;
 }
 
-.fa-stop{
+.fa-stop {
   color: #f44236;
 }
 
-.fa-plus-square{
+.fa-plus-square {
   color: #008080;
 }
 
-button{
+button {
   margin-left: 0;
 }
 
-
-
-
-
-
-
-
-
-
-.stats-card{
-	background-color: #fff;
-	box-shadow: 5px 5px 15px #aaa;
+.stats-card {
+  background-color: #fff;
+  box-shadow: 5px 5px 15px #aaa;
 }
 
-@media(max-width: 640px){
-	.stats-card{
-		margin-top: 15%;
-	}
+@media (max-width: 640px) {
+  .stats-card {
+    margin-top: 15%;
+  }
 }
 
-.stats{
-	background-color: #292929;
-	padding: 10px;
-	color: #fff;
-	text-align: center;
+.stats {
+  background-color: #292929;
+  padding: 10px;
+  color: #fff;
+  text-align: center;
 }
 
-.round-stat{
-	margin: auto;
-	border: 2px solid #fff;
-	border-radius: 555555px;
-	width: 70px;
-	height: 70px;
-	padding: 25px 10px;
+.round-stat {
+  margin: auto;
+  border: 2px solid #fff;
+  border-radius: 555555px;
+  width: 70px;
+  height: 70px;
+  padding: 25px 10px;
 }
 
-h3.round-stat{
-	font-size: 18px;
+h3.round-stat {
+  font-size: 18px;
 }
 
-small{
-	font-size: 80%;
+small {
+  font-size: 80%;
 }
 
-.stats-info{
-	padding: 10px;
+.stats-info {
+  padding: 10px;
 }
 
-.stats-action{
+.stats-action {
 }
 
-.modal-content{
-	border-radius: 0px;
+.modal-content {
+  border-radius: 0px;
 }
 
-.modal-header{
-	background-color: #292929;
-	color: #fff;
+.modal-header {
+  background-color: #292929;
+  color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*Detail Page*/
 .demo-preview {
   position: absolute;
   width: 100%;
-  /*top: 30%;*/
   background-color: #fff;
   padding: 4% 0;
-/*  transform: translate(0, -50%);
-  -webkit-transform: translate(0, -50%);*/
 }
 
 .product-image-section .img-product-wrapper {
@@ -374,17 +333,17 @@ small{
 }
 .product-image-section .img-product-wrapper .img-thumbs .item {
   margin-bottom: 5px;
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
   position: relative;
   height: 60px;
   margin-bottom: 10px;
 }
 .product-image-section .img-product-wrapper .img-thumbs .item.active {
   border-color: transparent;
-  outline: 2px solid #2196F3;
+  outline: 2px solid #2196f3;
 }
 .product-image-section .img-product-wrapper .img-thumbs .item.active:before {
-  content: "";
+  content: '';
   position: absolute;
   left: 100%;
   top: 50%;
@@ -394,7 +353,7 @@ small{
   height: 0;
   border-style: solid;
   border-width: 5px 0 5px 5px;
-  border-color: transparent transparent transparent #2196F3;
+  border-color: transparent transparent transparent #2196f3;
 }
 .product-image-section .img-product-wrapper .img-thumbs .item a {
   display: block;
@@ -420,7 +379,7 @@ small{
   float: left;
 }
 .product-image-section .img-product-wrapper .lg-img-view .inner {
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
   padding: 0px;
   height: 480px;
   position: relative;
@@ -455,7 +414,7 @@ small{
 .product-description-section .product-detail-wrapper > .group {
   padding-bottom: 10px;
   margin-bottom: 40px;
-  border-bottom: 1px solid #CCC;
+  border-bottom: 1px solid #ccc;
 }
 .product-description-section .product-detail-wrapper > .group .rate {
   display: inline-block;
@@ -477,7 +436,7 @@ small{
 .product-description-section .product-detail-wrapper > .group .order-count {
   display: inline-block;
   padding-left: 20px;
-  border-left: 1px solid #CCC;
+  border-left: 1px solid #ccc;
   line-height: 1;
 }
 .product-description-section .product-detail-wrapper > .group .order-count strong {
@@ -500,7 +459,6 @@ small{
 .product-description-section .product-detail-wrapper .price-section span {
   display: block;
   color: #777777;
-  /*text-decoration: line-through;*/
   font-size: 15px;
 }
 .product-description-section .product-detail-wrapper .price-section .sale-label {
@@ -514,8 +472,8 @@ small{
   top: 0;
   left: 0;
   font-weight: 700;
-  background: #F44336;
-  color: #FFF;
+  background: #f44336;
+  color: #fff;
   font-size: 20px;
 }
 .product-description-section .product-detail-wrapper .price-section.has-safe .sale-label {
@@ -534,7 +492,7 @@ small{
 .product-description-section .product-detail-wrapper .description .list li {
   margin-bottom: 10px;
   font-size: 14px;
-  color: #2196F3;
+  color: #2196f3;
 }
 .product-description-section .product-detail-wrapper .description .list li span {
   color: #444;
@@ -545,7 +503,7 @@ small{
   -webkit-border-radius: 0px;
   text-transform: uppercase;
   padding: 8px 20px;
-  color: #FFF;
+  color: #fff;
   font-weight: 400;
   transition: all 0.4s ease;
   -webkit-transition: all 0.4s ease;
@@ -562,8 +520,8 @@ small{
   border-color: #ca0e0e;
 }
 .product-description-section .product-detail-wrapper .btn.btn-add-cart {
-  background: #2196F3;
-  border-color: #2196F3;
+  background: #2196f3;
+  border-color: #2196f3;
 }
 .product-description-section .product-detail-wrapper .btn.btn-add-cart:hover {
   background: #0c7cd5;
@@ -579,7 +537,7 @@ small{
 }
 .rate:before {
   font-family: 'FontAwesome';
-  content: "\f006  \f006  \f006  \f006  \f006";
+  content: '\f006  \f006  \f006  \f006  \f006';
 }
 .rate:after {
   font-family: 'FontAwesome';
@@ -588,39 +546,38 @@ small{
   left: 0;
   top: 0;
 }
-.rate[data-rating="5"]:after {
-  content: "\f005  \f005  \f005  \f005  \f005";
+.rate[data-rating='5']:after {
+  content: '\f005  \f005  \f005  \f005  \f005';
 }
-.rate[data-rating="4.5"]:after {
-  content: "\f005  \f005  \f005  \f005  \f089";
+.rate[data-rating='4.5']:after {
+  content: '\f005  \f005  \f005  \f005  \f089';
 }
-.rate[data-rating="4"]:after {
-  content: "\f005  \f005  \f005  \f005";
+.rate[data-rating='4']:after {
+  content: '\f005  \f005  \f005  \f005';
 }
-.rate[data-rating="3.5"]:after {
-  content: "\f005  \f005  \f005  \f089";
+.rate[data-rating='3.5']:after {
+  content: '\f005  \f005  \f005  \f089';
 }
-.rate[data-rating="3"]:after {
-  content: "\f005  \f005  \f005";
+.rate[data-rating='3']:after {
+  content: '\f005  \f005  \f005';
 }
-.rate[data-rating="2.5"]:after {
-  content: "\f005  \f005  \f089";
+.rate[data-rating='2.5']:after {
+  content: '\f005  \f005  \f089';
 }
-.rate[data-rating="2"]:after {
-  content: "\f005  \f005";
+.rate[data-rating='2']:after {
+  content: '\f005  \f005';
 }
-.rate[data-rating="1.5"]:after {
-  content: "\f005  \f089";
+.rate[data-rating='1.5']:after {
+  content: '\f005  \f089';
 }
-.rate[data-rating="1"]:after {
-  content: "\f005";
+.rate[data-rating='1']:after {
+  content: '\f005';
 }
-.rate[data-rating="0.5"]:after {
-  content: "\f089";
+.rate[data-rating='0.5']:after {
+  content: '\f089';
 }
 
-
-.bidders-table thead{
+.bidders-table thead {
   background-color: #292929;
   color: #fff;
 }
